# MyShared

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: README  env.py
app/: main.py
app/admin/: __init__.py  auth.py  setup.py  views.py
app/core/: __init__.py  cache.py  config.py  db.py  docs.py  redis.py  security.py  seed.py
app/crud/: base.py
app/dependencies/: auth.py  role.py
app/models/: __init__.py  ad_campaign.py  ad_event.py  api_token.py  base.py  category.py  chat_message.py  comment.py  consumer.py  merchant.py  shared_product.py  subscription.py  user.py  webhook.py
app/routers/: ads.py  categories.py  chat.py  comments.py  consumers.py  merchants.py  openapi.py  portal.py  shared_products.py  users.py  webhooks.py
app/schemas/: ad.py  chat.py  comment.py  consumer.py  merchant.py  openapi.py  shared_product.py  user.py  webhook.py
app/services/: ad_pool.py  analytics.py  bidding.py  notification.py  subscription.py
app/shared/: models.py  schemas.py
app/tasks/: __init__.py  ad_delivery.py  bidding_task.py  heartbeat.py  webhook_sender.py
app/templates/: consumer_dashboard.html  login.html  merchant_dashboard.html
app/utils/: event_logger.py  helpers.py  webhook_signature.py
app/websocket/: __init__.py  manager.py
scripts/: init_db.sh
tests/: conftest.py  test_admin.py  test_ads.py  test_users.py
