[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myshared"
version = "0.1.0"
description = "多商家电商平台后台系统"
authors = [{name = "Your Team", email = "team@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pyjwt==2.12.0",
    "passlib==1.7.4",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "celery==5.3.4",
    "websockets==12.0",
    "httpx==0.25.2",
    "requests==2.31.0",
    "alembic==1.13.0",
    "cryptography==41.0.7",
    "sqladmin==0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "ruff==0.1.8",
]
